kr8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kojacoord-system
  labels:
    name: kojacoord-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
